samples/_failures_safe/1761414180_6737c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_060b698c.c: In function ‘main’:
./samples/SAFE/__tmp_060b698c.c:150:5: error: expected declaration or statement at end of input
  150 |     printf("Dijkstra's algorithm:\n");
      |     ^~~~~~
